# Eltex

./: ScriptForGit.sh  hello_world.c  ssh.sh
les_5/: chil.sh  child.sh  input.txt  spript.c  zombie
task_3/: task_3.sh
task_4/: script_rights.sh
task_5/: script_5.sh
task_6/: script_C_1  script_C_1.cc
task_6_1/: CMakeLists.txt  Calculator  main.c
task_6_1/Libs/: add.c  divide.c  divide.h  multiply.c  multiply.h  subtraction.c  subtraction.h
task_7/: script_C_2  script_C_2.cc
